2002-07-08  Andras Varga

	* filemgrs.cc: added fname-append-host=true/false ini file setting.
	When turned on, appends the host name to the names of the output
	files (output vector, output scalar, snapshot files). This is 
	useful when the simulation is run on multiple machines concurrently
	(parallel independent runs (Akaroa) or parallel/distributed simulation),
	and all running instances write to the same directory (e.g. shared
	via NFS mount). [Idea from Steffen Sroka's Akaroa extension]

	* added akoutvectormgr.h/cc: integrated Steffen Sroka's Akaroa 
	extension that supports multiple independent replicated simulation runs.
	Akaroa can be activated by specifying
	  [General]
	  outputvectormanager-class=AkOutputVectorManager
	in the ini file. By default, all output vectors are under Akaroa 
	control; the <modulename>.<vectorname>.akaroa=false setting can be used
	to make Akaroa ignore specific vectors.
	For more info see the Akaroa home page and the OMNeT++ documentation.

	TBD: Akaroa integration into the makefiles; documentation

2002-06-13  Andras Varga

	* filemgrs.cc: 2 bugfixes: (1) output scalar file did not get opened
	sometimes; (2) output scalar file got removed between runs

2002-05-28  Frank Paehlke  <paehlke@tm.uni-karlsruhe.de>

	* filemgrs.cc: Use standard headers and namespaces if
	USE_STD_NAMESPACES is defined

2002-05-16  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* appreg.h (cOmnetAppRegistration): fixed declaration of className()

2002-05-04  ------ omnetpp-2.2 released ------

2002-03-11  Uli Kaage  <kaage@int.uni-karlsruhe.de>

	* filemgrs.cc (initVector): make sure that vp->name is not
	NULL. This would cause a crash on SUN Solaris
	(recordScalar): make sure name is not null

2002-03-03  Andras Varga

	* filemgrs.cc: increased precision of numbers in output vector files
	("%g" fprintf formats changed to "%.9g"). [suggested by George Young]

2002-03-03  Andras Varga

	* Various changes: management of output vectors, output scalars and